# aidd-kos

./: .env.example  .gitignore  .lightrag-ignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  Taskfile.yml  lefthook.yml  mise.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: epic.yml  feature.yml  story.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  merge-guard.yml  publish.yml
aidd-framework/: FRAMEWORK.md  SKILL-DEVELOPMENT.md  recommended-stack.md
aidd-framework/agents/: aidd-architect.md  aidd-builder.md  aidd-business-analyst.md  aidd-domain-expert.md  aidd-performance-engineer.md  aidd-product-manager.md  aidd-product-owner.md  aidd-qa-engineer.md  aidd-re-code-analyst.md  aidd-re-db-analyst.md  aidd-re-doc-analyst.md  aidd-re-infra-analyst.md  aidd-researcher.md  aidd-security-specialist.md  aidd-sre.md  aidd-technical-writer.md  aidd-ux-designer.md
aidd-framework/common/: adr-criteria.md  briefing-format.md  divergent-dialogue-format.md  loop-back-matrix.md  output-validation.md  presentation-format.md
aidd-framework/conventions/: github-issues.md  nextjs.md  terraform.md
aidd-framework/prototype/: tech-stack-detection.md
aidd-framework/review-perspectives/: README.md  epic-complete.md  phase-complete.md  setup-complete.md  spec-approved.md
aidd_kos/: __init__.py  claude_settings.py  cli.py  config.py  errors.py  index.py  install.py  status.py
docs/: PROJECT-CHARTER.md  glossary.md
docs/architecture/: baseline.md
docs/architecture/adr/: ADR-001-error-code-convention.md  ADR-002-fastmcp-process-proxy.md  ADR-003-project-level-mcp-settings.md  ADR-004-lightrag-inprocess.md
docs/audit/: 2026-06.md
docs/business-context/: auto-sync.md  distribution.md  embedded-startup.md  index-sync.md  install.md  mcp-aggregator.md  multi-project.md  status-visibility.md
docs/epics/: 17-pypi-release-context.md  2-mcp-aggregator-context.md  25-incremental-index-context.md  26-context.md  27-context.md  3-embedded-startup-context.md  38-multi-project-context.md  4-install-context.md
docs/playbook/: auto-sync.md  secrets.md
docs/research/: fastmcp-aggregator.md
docs/spec/: auto-sync.md  distribution.md  embedded-startup.md  index-sync.md  install.md  mcp-aggregator.md  multi-project.md  status-visibility.md
mcp_server/: server.py
scripts/: index.py  query.py  server.py  status.py  stop.py
specs/e2e/: 15-embedded-f02.md  20-publish-workflow.md  21-release-docs.md  29-diff-index.md  30-delete-sync.md  31-full-rebuild.md  40-project-mcp.md  41-inprocess.md  46-status-4values.md  47-indexing-progress.md  5-lightrag-tools.md  6-codegraph-proxy.md  7-kos-status.md  8-install.md
tests/: test_smoke.py
tests/e2e/: conftest.py  test_embedded_f01.py  test_embedded_f02.py  test_index.py  test_index_f29.py  test_index_f30.py  test_index_f31.py  test_install.py  test_install_f40.py  test_mcp_aggregator_f01.py  test_mcp_aggregator_f02.py  test_mcp_aggregator_f03.py  test_pypi_publish_f01.py  test_status.py
tests/unit/: test_claude_settings.py  test_config.py  test_errors.py  test_index.py  test_index_check.py  test_index_f29.py  test_index_f30.py  test_index_f31.py  test_install.py  test_lifespan.py  test_publish_workflow.py  test_pyproject_metadata.py  test_release_docs.py  test_status.py
(+17 files in other folders)
