[project]
name = "aidd-kos"
version = "0.1.0"
description = "Agentic Knowledge OS — LightRAG knowledge graph + MCP server for AI-driven development"
requires-python = ">=3.10"
dependencies = [
    "lightrag-hku[api]>=1.5.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aidd-kos-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
