[project]
name = "aidd-kos"
version = "0.1.0"
description = "Agentic Knowledge OS — LightRAG knowledge graph + MCP server for AI-driven development"
requires-python = ">=3.10"
dependencies = [
  "lightrag-hku[api]>=1.5.0",
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
]

[project.scripts]
aidd-kos-mcp = "mcp_server.server:main"
aidd-kos = "aidd_kos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "aidd_kos"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.11.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",
  "RUF001", # 日本語文字列の全角文字は意図的
  "RUF002", # 日本語 docstring の全角括弧は意図的
  "RUF003", # 日本語コメントの全角括弧は意図的
]

[tool.ruff.format]
quote-style = "double"
